# Bazel_tryout

./: WORKSPACE.bazel  function.bzl
projects/calculator/: BUILD.bazel
projects/calculator/test/: calculator_test.py
projects/my-python-app/: BUILD.bazel  main.py
