load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "calculator",
    srcs = ["src/calculator.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "calculator_test",
    srcs = ["test/calculator_test.py"],
    deps = [":calculator"],
    visibility = ["//visibility:public"],
)